<resources>

    <!--Main-->
    <string name="app_name">Medipet</string>
    <string name="image_preview_desc">Vista previa de la imagen</string>
    <string name="welcome_message">Bienvenido a MediPet</string>
    <string name="sub_welcome_message">La aplicación de confianza para tus mascotas</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="ic_image">Vista previa de icono</string>

    <!--Log in-->
    <string name="logo">MediPet</string>
    <string name="welcome_message2">¡Bienvenido de nuevo!</string>
    <string name="instruction_message">Por favor, introduce tus datos para continuar</string>
    <string name="email_input">Correo electrónico</string>
    <string name="password_input">Contraseña</string>
    <string name="forgot_password_link">¿Olvidaste tu contraseña?</string>

    <!--Owner Register-->
    <string name="welcome_text">¡Bienvenido!</string>
    <string name="instruction_text">Por favor, introduce tus datos para el registro</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="mother_last_name">Apellido Materno</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="pass">Contraseña</string>
    <string name="confirmPass">Confirmar Contraseña</string>
    <string name="register_button2">Registrar</string>
    <string name="btn_back_des">Boton regresar</string>

    <!-- Register pet-->
    <string name="icon_pet_desc">Ícono de tarjeta médica de mascota</string>
    <string name="register_pet_title">¡Registra a tu mascota!</string>
    <string name="pet_name">Nombre de la mascota</string>
    <string name="pet_birthday">Coloca el año asi: 2004/07/24 </string>
    <string name="pet_gender">Genero</string>
    <string name="pet_specie_label">Especie</string>
    <string name="pet_breed">Raza</string>
    <string name="pet_weight">Peso</string>
    <string name="pet_allergies">Alergias</string>
    <string name="register_pet_button">Registrar</string>
    <string-array name="gender_options">
        <item>H</item>
        <item>M</item>
    </string-array>

    <!-- Profile -->
    <string name="back_button_desc">Botón de retroceso</string>
    <string name="profile_title">Mi Perfil</string>
    <string name="profile_icon_desc">Icono de perfil</string>
    <string name="label_name">Nombre</string>
    <string name="hint_name">Escribe tu nombre</string>
    <string name="label_email">Correo electrónico</string>
    <string name="hint_email">ejemplo@correo.com</string>
    <string name="label_phone">Teléfono</string>
    <string name="hint_phone">Escribe tu número</string>
    <string name="label_address">Dirección</string>
    <string name="hint_address">Escribe tu dirección</string>
    <string name="edit_button_text">Editar</string>
    <string name="update">Actualizar</string>
    <string name="cancel">Actualizar</string>

    <!-- Pet Profile -->
    <string name="loading">Cargando...</string>
    <string name="pet_specie">Especie</string>
    <string name="pet_race">Race</string>
    <string name="pet_title">Tu mascota</string>
    <string name="photo_profile">Foto Perfil</string>

    <string name="pet_name_label">Nombre:</string>
    <string name="pet_birthday_label">Fecha de nacimiento:</string>
    <string name="pet_weight_label">Peso:</string>
    <string name="pet_allergies_label">Alergias:</string>

    <string name="pet_race_label">Raza:</string>
    <string name= "gender_label">Genero:</string>




    <!-- Home_main -->
    <string name="ic_sign_out">Cerrar sesión</string>
    <string name="profile_icon">Perfil</string>
    <string name="products_title">Productos</string>
    <string name="product_image">Imagen de productos</string>
    <string name="products_menu">Menú de productos</string>
    <string name="pets_title">Mascotas</string>
    <string name="pet_image">Imagen de mascota</string>
    <string name="add_pet">Agregar mascota</string>
    <string name="appointments_menu">Citas</string>
    <string name="home_menu">Inicio</string>

    <string name="email_icon">Icon email</string>
    <string name="continue_button">Siguiente</string>

    <!-- Interfaz prescription -->
    <string name="img_prescription">Imagen de prescripcion</string>
    <string name="reason_label">Motivo:</string>
    <string name="diagnosis_label">Diagnostico:</string>
    <string name="date_label">Fecha de prescripcion:</string>
    <string name="btn_xray">Radiografia</string>
    <string name="btn_lab">Analisis</string>
    <string name="treatment_label">Tratamiento</string>
    <string name="specifications_label">Especificaciones</string>

    <!-- Interfaz recover password -->
    <string name="img_pass">Imagen de recuperar contraseña</string>
    <string name="pass_des_1">Ingrese su dirección de correo electrónico y te enviaremos un codigo a su correo electrónico para restablecer su contraseña.</string>
    <string name="pass_des_2">Ingrese el código enviado a tu correo electrónico</string>
    <string name="pass_des_3">Ingresa tu nueva contraseña</string>
    <string name="hint_pass">Nueva Contraseña</string>
    <string name="hint_pass2">Confirmar Contraseña</string>
    <string name="btn_recover">Restablecer</string>

    <!-- Interfaza Products -->
    <string name="search_product">Buscar productos...</string>
    <string name="products_label">Productos</string>
    <string name="icon_products">Icono de producto</string>

    <!-- Interfaza Appointments -->
    <string name="search_appointment">Buscar citas...</string>
    <string name="appointments_label">Citas</string>
    <string name="go_to_appointments">Ir a citas</string>
    <string name="btn_prescription">Prescripcion</string>

    <!-- Interfaza Vet -->
    <string name="vet_tittle">Veterinario</string>
    <string name="img_vet">Imagen de veterinario</string>
    <string name="label_speciality">Especialidad</string>

</resources>
