<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8FE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_button_desc"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_title"
            android:textSize="22sp"
            android:textColor="#00796B"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/fp_pet"
            android:background="@drawable/bg_circle_light"
            android:contentDescription="@string/profile_icon_desc"
            android:layout_marginBottom="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_border_box"
            android:padding="16dp"
            android:elevation="2dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:textColor="#A0A0A0"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_birthday"
                android:textColor="#A0A0A0"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_weight"
                android:textColor="#A0A0A0"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_allergies"
                android:textColor="#A0A0A0"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_specie"
                android:textColor="#A0A0A0"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_race"
                android:textColor="#A0A0A0"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginBottom="8dp"/>


            <TextView
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button_text"
                android:textColor="#5A9BD5"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingTop="8dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
