<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F3FF"
    android:padding="16dp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_arrow"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/btn_back_des" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vet_tittle"
        android:textSize="22sp"
        android:textColor="#00796B"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/img_vet"
        android:src="@drawable/img_doctor"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_border_box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="#5A9BD5"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="#000000"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A9BD5"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textColor="#5A9BD5"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVetEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="#000000"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A9BD5"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            android:textColor="#5A9BD5"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVetPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="#000000"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A9BD5"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_speciality"
            android:textColor="#5A9BD5"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVetSpeciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="#000000"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A9BD5"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp" />

    </LinearLayout>
</LinearLayout>
