<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F3FF"
    android:padding="16dp">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_arrow"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/btn_back_des" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/img_prescription"
        android:src="@drawable/img_prescription"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason_label"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:radius="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnosis_label"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvDiagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvDatePrescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <!-- Bloque tratamiento -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treatment_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:text="@string/loading"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/rounded_light_grayish_blue_border" />
    </LinearLayout>

    <!-- Bloque especificaciones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specifications_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSpecifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:text="@string/loading"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/rounded_light_grayish_blue_border" />
    </LinearLayout>

</LinearLayout>
